/*
Copyright 2024 Google LLC

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

option go_package = "protos/";

package examples.spanner.music;

message SingerInfo {
  optional int64 singer_id = 1;
  optional string birth_date = 2;
  optional string nationality = 3;
  optional Genre genre = 4;
}

enum Genre {
  POP = 0;
  JAZZ = 1;
  FOLK = 2;
  ROCK = 3;
}
